--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ publishDir = "docs"
 
 # These settings specify the title for your site, and the name of
 # the Hugo theme that it uses.
-title = "A calade website"
+title = "rbkeeney"
 theme = "calade"
 
 # What format should the permalinks take?
@@ -79,14 +79,14 @@ theme = "calade"
 [params]
     siteHeader = "header/banner.png"
     siteProfile = "header/profile.png"
-    description = "A website of one's own"
-    footer = "A footer of one's own"
-    twitterImage = "https://djnavarro.github.io/hugo-calade/header/caladown.png"
-    colorPage = "#333333"    # background colour
-    colorText = "#dddddd"    # main text colour
+    description = "@rbkeeney's Github Site"
+    footer = "@rbkeeney | patreon.com/rbkeeney"
+    twitterImage = "header/banner.png"
+    colorPage = "#FFFFFF"    # background colour
+    colorText = "#383838"    # main text colour
     colorFade = "#888888"    # faded text colour
-    colorAccent1 = "#ff69b4" # first accent colour ("highlight")
-    colorAccent2 = "#ba68c8" # second accent colour ("lowlight")
+    colorAccent1 = "#ff6600" # first accent colour ("highlight")
+    colorAccent2 = "#0099ff" # second accent colour ("lowlight")
 
 
 # additional settings
