--- a/config.toml
+++ b/config.toml
@@ -81,7 +81,7 @@ theme = "calade"
     siteProfile = "header/profile.png"
     description = "@rbkeeney's Github Site"
     footer = "@rbkeeney | patreon.com/rbkeeney"
-    twitterImage = "header/banner.png"
+    twitterImage = "header/profile.png"
     colorPage = "#FFFFFF"    # background colour
     colorText = "#383838"    # main text colour
     colorFade = "#888888"    # faded text colour
